--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="servicios color">
 			<h2 style="color: #fff">Formateo e Instalación de Sistema Operativo</h2>
 			<p style="color: #fff">Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) a tu computadora para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong></p>
-			<span>Q130.00</span>
+			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
 			<h2>Formateo e Instalación de Windows + Programas Complementarios</h2>
@@ -51,17 +51,17 @@
 				<li>Adobe Reader(Lector de archivos PDF)</li>
 			</ul>
 			</p>
-			<span>Q200.00</span>
+			<span>Q150.00</span>
 		</div>
 		<div class="servicios color">
-			<h2 style="color: #fff">Mantenimiento Preventivo de Hardware (CPU)</h2>
+			<h2 style="color: #fff">Limpieza de Gabinete (CPU) externa e interna</h2>
 			<p style="color: #fff">Limpiamos de manera profunda todos los componentes internos de tu CPU con productos de calidad, eliminando todo el polvo para evitar futuros problemas y dejándola con un mejor aspecto. <strong>(Incluye cambio de Pasta térmica)</strong></p>
-			<span>Q120.00</span>
+			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
-			<h2>Mantenimiento Preventivo de Hardware (Laptop)</h2>
-			<p>Limpiamos de manera profunda la parte externa (Parte del teclado y pantalla) y la parte interna (componentes) de tu Laptop con productos de calidad, eliminando todo el polvo para evitar futuros problemas y dejándola como nueva.<strong>(Incluye cambio de Pasta térmica)</strong></p>
-			<span>Q130.00</span>
+			<h2>Limpieza externa e interna (Laptop)</h2>
+			<p>Limpiamos de manera profunda tu Laptop con productos de calidad, eliminando todo el polvo para evitar futuros problemas y dejándola como nueva.<strong>(Incluye cambio de Pasta térmica)</strong></p>
+			<span>Q120.00</span>
 		</div>
 	</main>
 
@@ -87,8 +87,8 @@
 		<div class="about_me">
 			<h2 style="padding: 50px; text-align: center;">Sobre Tecno Brandt</h2>
 			<img src="imagenes/brandon3.jpg">
-			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web. Desde hace unos meses que no me encuentro bien de salud y casi todos los días tengo que ir al hospital. Mis padres están gastando en mis tratamientos, medicamentos, parqueos, gasolina, etc.<br> Quería hacer algo para poder ayudar a mis padres a pagar algunos costos, y que mejor manera de hacerlo que trabajando en algo que me gusta y de manera honrada.<br> Por eso use mis conocimientos de Desarrollo web y creé el Sitio web de <strong class="name">Tecno Brandt</strong> para poder brindarles mis servicios de Técnico en computación y puedan ayudarme con mi propósito.
-			Te invitó a que si te interesó alguno de los servicios que te ofresco no dudes en contactarte conmigo, me estarás ayudando bastante.
+			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web. Desde hace unos meses que no me encuentro bien de salud y casi todos los días tengo que ir al hospital. Mis padres están gastando en mis tratamientos, medicamentos, parqueos, gasolina, etc.<br> Quería hacer algo para poder ayudar a mis padres a pagar algunos gastos, y que mejor manera de hacerlo que trabajando en algo que me gusta y de manera honrada.<br> Por eso use mis conocimientos de Desarrollo web y creé el Sitio web de <strong class="name">Tecno Brandt</strong> para poder brindarles mis servicios de Técnico en computación y puedan ayudarme con mi propósito.
+			Te invito a que si te interesó alguno de los servicios que te ofresco no dudes en contactarte conmigo, me estarás ayudando bastante.
 			</article>
 		</div>
 	</section>
