--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<h2 style="padding: 50px 0px">Servicios</h2>
 		<div class="servicios color">
 			<h2 style="color: #fff">Formateo e Instalación de Sistema Operativo</h2>
-			<p style="color: #fff">Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) a tu computadora para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong></p>
+			<p style="color: #fff">Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong></p>
 			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
 			<h2>Formateo e Instalación de Windows + Programas Complementarios</h2>
-			<p>Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) a tu computadora para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong><br>
+			<p>Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong><br>
 			Se le instalará a tu computadora 5 programas importantes para que esté lista a usar desde el momento que la recibas.
 			<ul>
 				<li>Office 2013(Activado)</li>
