--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
-			<h2>Formateo e Instalación de Windows + Programas Complementarios</h2>
+			<h2>Formateo e Instalación de Sistema Operativo + Programas Complementarios</h2>
 			<p>Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong><br>
 			Se le instalará a tu computadora 5 programas importantes para que esté lista a usar desde el momento que la recibas.
 			<ul>
