--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</header>
 
 	<section class="portada" id="inicio">
-		<h1>¿Necesitas dejar tu computadora como nueva?</h1>
+		<h1>¿Te gustaría dejar tu computadora como nueva otra vez?</h1>
 		<p>En <strong class="name">Tecno Brandt</strong> te ofrecemos nuestros servicios.</p>
 		<a href="#servicios" id="btn_servicios">Conoce nuestros servicios</a>
 	</section>
@@ -35,12 +35,12 @@
 	<main id="servicios">
 		<h2 style="padding: 50px 0px">Servicios</h2>
 		<div class="servicios color">
-			<h2 style="color: #fff">Formateo e Instalación de Sistema Operativo</h2>
+			<h2 style="color: #fff">1- Formateo e Instalación de Sistema Operativo</h2>
 			<p style="color: #fff">Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong></p>
 			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
-			<h2>Formateo e Instalación de Sistema Operativo + Programas Complementarios</h2>
+			<h2>2- Formateo e Instalación de Sistema Operativo + Programas Complementarios</h2>
 			<p>Para este servicio deberás de guardar todos tus documentos importantes en un dispositivo de almacenamiento externo (USB) con anticipación, ya que se eliminaran todos tus datos. Formateamos tu computadora y le instalamos un sistema operativo (Windows 7, 8.1 o 10) para su funcionamiento. <strong>Incluye Sistema Operativo activado.</strong><br>
 			Se le instalará a tu computadora 5 programas importantes para que esté lista a usar desde el momento que la recibas.
 			<ul>
@@ -54,12 +54,12 @@
 			<span>Q150.00</span>
 		</div>
 		<div class="servicios color">
-			<h2 style="color: #fff">Limpieza de Gabinete (CPU) externa e interna</h2>
+			<h2 style="color: #fff">3- Limpieza de Gabinete (CPU) externa e interna</h2>
 			<p style="color: #fff">Limpiamos de manera profunda todos los componentes internos de tu CPU con productos de calidad, eliminando todo el polvo para evitar futuros problemas y dejándola con un mejor aspecto. <strong>(Incluye cambio de Pasta térmica)</strong></p>
 			<span>Q100.00</span>
 		</div>
 		<div class="servicios">
-			<h2>Limpieza externa e interna (Laptop)</h2>
+			<h2>4- Limpieza externa e interna (Laptop)</h2>
 			<p>Limpiamos de manera profunda tu Laptop con productos de calidad, eliminando todo el polvo para evitar futuros problemas y dejándola como nueva.<strong>(Incluye cambio de Pasta térmica)</strong></p>
 			<span>Q120.00</span>
 		</div>
@@ -75,7 +75,7 @@
 			<a href="https://wa.me/+50253583502" target="blank"><i class="fab fa-whatsapp"></i></a>
 
 			<div class="importante">
-			<span id="mensaje_toggle">¡Importante!</span>
+			<span id="mensaje_toggle">Más información</span>
 			<div id="mensaje">
 			<p style="color: #fff">Por temas de mi salud y de la pandemia, únicamente estaré trabajando los equipos desde mi casa. Si necesitas algún servicio ponte en contacto conmigo para poder darte la dirección de mi domicilio y traigas tu equipo para poder trabajarlo.</p>
 			<span id="cerrar_mensaje">Entendido</span></div>
@@ -94,7 +94,7 @@
 	</section>
 
 	<footer>
-		<p style="color:#fff">Diseñado con mucho cariño por Brandon Chanquin</p>
+		<p style="color:#fff">Diseñado y Desarrollado por &copyBrandon Chanquin</p>
 	</footer>
 
 
