--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section id="contacto">
 		<div class="contact_items">
 			<h2 style="padding: 50px 0px 25px 0px; color: #fff;">Contáctame</h2>
-			<p style="color: #fff;">Si te interesó algún servicio, puedes contactarme por cualquiera de mis redes sociales.</p>
+			<p style="color: #fff;">Si te interesó algún servicio, puedes contactarme por cualquiera de mis redes sociales dandolé click a los iconos de abajo.<br> O puedes traer tu equipo a la <strong>15 calle "B" 15-41 Colonia San Ignacio zona 7 de Mixco.</strong></p>
 
 			<a href="https://www.instagram.com/magicbrandt/" target="blank"><i class="fab fa-instagram"></i></a>
 			<a href="mailto:brandonchanquin9@gmail.com"><i class="far fa-envelope"></i></a>
