--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section id="contacto">
 		<div class="contact_items">
 			<h2 style="padding: 50px 0px 25px 0px; color: #fff;">Contáctame</h2>
-			<p style="color: #fff;">Si te interesó algún servicio, puedes contactarme por cualquiera de mis redes sociales dandolé click a los iconos de abajo.<br> O puedes traer tu equipo a la <strong>15 calle "B" 15-41 Colonia San Ignacio zona 7 de Mixco.</strong></p>
+			<p style="color: #fff;">Si te interesó algún servicio, puedes contactarme por cualquiera de mis redes sociales dándole click a los iconos de abajo.<br> O puedes traer tu equipo a mi domicilio en la <strong>15 calle "B" 15-41 Colonia San Ignacio zona 7 de Mixco.</strong></p>
 
 			<a href="https://www.instagram.com/magicbrandt/" target="blank"><i class="fab fa-instagram"></i></a>
 			<a href="mailto:brandonchanquin9@gmail.com"><i class="far fa-envelope"></i></a>
@@ -77,7 +77,7 @@
 			<div class="importante">
 			<span id="mensaje_toggle">Más información</span>
 			<div id="mensaje">
-			<p style="color: #fff">Por temas de mi salud y de la pandemia, únicamente estaré trabajando los equipos desde mi casa. Si necesitas algún servicio ponte en contacto conmigo para poder darte la dirección de mi domicilio y traigas tu equipo para poder trabajarlo.</p>
+			<p style="color: #fff">Contámos con servicio a domicilio (recogemos y entregamos tu equipo en el perímetro de la cápital) con un pequeño recargo de <strong>Q25.00</strong>  </p>
 			<span id="cerrar_mensaje">Entendido</span></div>
 			</div>
 		</div>
