--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="importante">
 			<span id="mensaje_toggle">Más información</span>
 			<div id="mensaje">
-			<p style="color: #fff">Contámos con servicio a domicilio (recogemos y entregamos tu equipo en el perímetro de la cápital) con un pequeño recargo de <strong>Q25.00<br>Si tienes alguna duda ponte en contacto conmigo.</strong></p>
+			<p style="color: #fff">Contámos con servicio a domicilio (recogemos y entregamos tu equipo en el perímetro de la cápital) con un pequeño recargo de <strong>Q25.00</strong><br>Si tienes alguna duda ponte en contacto conmigo.</p>
 			<span id="cerrar_mensaje">Entendido</span></div>
 			</div>
 		</div>
