--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="importante">
 			<span id="mensaje_toggle">Más información</span>
 			<div id="mensaje">
-			<p style="color: #fff">Contámos con servicio a domicilio (recogemos y entregamos tu equipo en el perímetro de la cápital) con un pequeño recargo de <strong>Q25.00</strong><br>Si tienes alguna duda ponte en contacto conmigo.</p>
+			<p style="color: #fff">Contámos con servicio a domicilio (recogemos y entregamos tu equipo en el perímetro de la cápital) con un pequeño recargo de <strong>Q25.00</strong><br>Si tienes alguna duda puedes ponerte en contacto conmigo.</p>
 			<span id="cerrar_mensaje">Entendido</span></div>
 			</div>
 		</div>
@@ -87,8 +87,8 @@
 		<div class="about_me">
 			<h2 style="padding: 50px; text-align: center;">Sobre Tecno Brandt</h2>
 			<img src="imagenes/brandon3.jpg">
-			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web. Desde hace unos meses que no me encuentro bien de salud y casi todos los días tengo que ir al hospital. Mis padres están gastando en mis tratamientos, medicamentos, parqueos, gasolina, etc.<br> Quería hacer algo para poder ayudar a mis padres a pagar algunos gastos, y que mejor manera de hacerlo que trabajando en algo que me gusta y de manera honrada.<br> Por eso use mis conocimientos de Desarrollo web y creé el Sitio web de <strong class="name">Tecno Brandt</strong> para poder brindarles mis servicios de Técnico en computación y puedan ayudarme con mi propósito.
-			Te invito a que si te interesó alguno de los servicios que te ofresco no dudes en contactarte conmigo, me estarás ayudando bastante.
+			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web. Desde hace unos meses que no me encuentro bien de salud y casi todos los días tengo que ir al hospital. Mis padres están gastando en mis tratamientos, medicamentos, parqueos, gasolina, etc.<br> Quería hacer algo para poder ayudar a mis padres a pagar algunos gastos, y que mejor forma de hacerlo que haciendo algo que me gusta y a lo que me dedicaré en un futuro.<br> Por eso use mis conocimientos de Desarrollo web y creé el Sitio web de <strong class="name">Tecno Brandt</strong> para poder brindarles mis servicios de Técnico en computación y puedan ayudarme con mi propósito.
+			Te invito a que si te interesó alguno de los servicios que te ofresco no dudes en contactarte conmigo.
 			</article>
 		</div>
 	</section>
