Se actualizo el apartado de Sobre Tecno Brandt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="#inicio" class="inicio">Inicio</a>
 			<a href="#servicios" class="servicio">Servicios</a>
 			<a href="#contacto" class="contacto">Contacto</a>
-			<a href="#sobre_mi" class="selected">¿Me ayudas?</a>
+			<a href="#sobre_mi" class="selected">¿Quien es?</a>
 			
 		</nav>
 	</header>
@@ -85,10 +85,12 @@
 
 	<section id="sobre_mi">
 		<div class="about_me">
-			<h2 style="padding: 50px; text-align: center;">Sobre Tecno Brandt</h2>
-			<img src="imagenes/brandon3.jpg">
-			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web. Desde hace unos meses que no me encuentro bien de salud y casi todos los días tengo que ir al hospital. Mis padres están gastando en mis tratamientos, medicamentos, parqueos, gasolina, etc.<br> Quería hacer algo para poder ayudar a mis padres a pagar algunos gastos, y que mejor forma de hacerlo que haciendo algo que me gusta y a lo que me dedicaré en un futuro.<br> Por eso use mis conocimientos de Desarrollo web y creé el Sitio web de <strong class="name">Tecno Brandt</strong> para poder brindarles mis servicios de Técnico en computación y puedan ayudarme con mi propósito.
-			Te invito a que si te interesó alguno de los servicios que te ofresco no dudes en contactarte conmigo.
+			<h2 style="padding: 50px; text-align: center;">¿Quien es Tecno Brandt?</h2>
+			<!-- <img src="imagenes/brandon3.jpg"> -->
+			<article>Hola soy Brandon Chanquin <strong class="name">Desarrollador web Junior/Técnico en Reparación y soporte de Sistemas Informáticos</strong>, y soy el creador de este sitio web.
+			Desarrollé el Sitio web de <strong class="name">Tecno Brandt</strong> para brindarles mis servicios de Técnico en computación.
+			Me certifiqué en Intecap de la Carrera técnica Reparación y soporte de sistemas Informáticos. En 2022 amplíe mis conocimientos de 
+			Desarrollo web con un curso de Desarrollo Front-end. Actualmente trabajo por mi cuenta como Técnico en Computación.
 			</article>
 		</div>
 	</section>
