Se agrego un menu desplegable, faltan los iconos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<script src="https://kit.fontawesome.com/859b3cdd78.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" type="text/css" href="indexresponsive.css">
+	<link rel="stylesheet" type="text/css" href="menu_responsive.css">
 	<link rel="icon" type="imag/ico" href="imagenes/laptop-medical-solid.ico">
 	<title>Tecno Brandt</title>
+	
 </head>
 <body>
 	
@@ -16,8 +18,10 @@
 		<a href="#inicio" class="texto_logo">Tecno Brandt</a>
 		</div>
 
+		<button id="abrir" class="open">abrir</button>
+
 		<nav class="nav">
-			
+			<button id="cerrar" class="close">x</button>
 			<a href="#inicio" class="inicio">Inicio</a>
 			<a href="#servicios" class="servicio">Servicios</a>
 			<a href="#contacto" class="contacto">Contacto</a>
