Se agregaron los iconos al menu y se modifico la apariencia del menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="menu_responsive.css">
 	<link rel="icon" type="imag/ico" href="imagenes/laptop-medical-solid.ico">
 	<title>Tecno Brandt</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
 </head>
 <body>
@@ -18,14 +19,14 @@
 		<a href="#inicio" class="texto_logo">Tecno Brandt</a>
 		</div>
 
-		<button id="abrir" class="open">abrir</button>
+		<button id="abrir" class="open"><i class="fa-solid fa-bars"></i></button>
 
 		<nav class="nav">
-			<button id="cerrar" class="close">x</button>
+			<button id="cerrar" class="close"><i class="fa-regular fa-circle-xmark"></i></button>
 			<a href="#inicio" class="inicio">Inicio</a>
 			<a href="#servicios" class="servicio">Servicios</a>
 			<a href="#contacto" class="contacto">Contacto</a>
-			<a href="#sobre_mi" class="selected">¿Quien es?</a>
+			<a href="#sobre_mi" class="selected">Acerca de</a>
 			
 		</nav>
 	</header>
